SVN: merge with branch 2.7/2.2 (rev.6462-6646)
git-svn-id: https://svn.javlin.eu/svn/cloveretl.opensource/trunk@6647 a09ad3ba-1a0f-0410-b1b9-c67202f10d70